--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "game designing program for people to learn and to make games online",
   "main": "index.js",
   "scripts": {
-    "test": "node dev.js",
-	"build": "node build.js"
+    "start": "node auto-dev.js",
+    "build": "node build.js"
   },
   "author": "Gvbvdxx",
   "license": "MIT",
   "dependencies": {
-    "gvbvdxx-pack": "^2.2.7"
+    "gvbvdxx-pack-2": "^1.5.0",
+    "ws": "^8.14.2"
   }
 }
